# ToxicGasDetector

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/toxicgasdetector/: dataset.py  helpers.py
src/toxicgasdetector/predictor/: base_predictor.py  helper.py  helpers.py
